--- a/styles/themes/dark/_pallete.scss
+++ b/styles/themes/dark/_pallete.scss
@@ -14,4 +14,5 @@
   --color-yellow: #efb034;
   --color-green: #1dd75b;
   --color-blue: #379ae6;
+  --black-gradient: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
 }
