--- a/components/home/Hero/Hero.module.scss
+++ b/components/home/Hero/Hero.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/abstracts/mixins.scss';
+
 $header-height-mob: 5.6rem;
 $header-height-spc: 6.4rem;
 
@@ -27,12 +29,7 @@ $header-height-spc: 6.4rem;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgb(48, 46, 46);
-  background: linear-gradient(
-    0deg,
-    rgba(48, 46, 46, 1) 0%,
-    rgba(0, 0, 0, 0) 64%
-  );
+  @include blackGradientBg;
 }
 
 .movieOverview {
