--- a/components/movies/MovieDetail/MovieDetail.module.scss
+++ b/components/movies/MovieDetail/MovieDetail.module.scss
@@ -22,6 +22,11 @@
   }
 }
 
+.release {
+  font-style: italic;
+  letter-spacing: 0.6px;
+  opacity: 0.9;
+}
 .posterImageWrapper {
   width: 100%;
   height: 80vh;
@@ -30,7 +35,7 @@
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 3.2rem;
   font-weight: var(--font-weight-bold);
 }
 
@@ -58,18 +63,6 @@
 
 .comment {
   border: 1px solid;
-}
-
-.authorIcon {
-  font-size: 4rem;
-}
-
-.authorImageWrapper {
-  width: 3.4rem;
-  height: 3.4rem;
-  position: relative;
-  overflow: hidden;
-  border-radius: 50%;
 }
 
 @include mq(tab) {
