--- a/components/movies/MovieDetail/MovieDetail.module.scss
+++ b/components/movies/MovieDetail/MovieDetail.module.scss
@@ -52,7 +52,7 @@
   width: var(--width-mob);
   margin: 0 auto;
   max-width: 60rem;
-  border: 1px solid pink;
+  // border: 1px solid pink;
 }
 
 .right {
