--- a/components/movies/MovieDetail/Reviews/Reviews.module.scss
+++ b/components/movies/MovieDetail/Reviews/Reviews.module.scss
@@ -1,7 +1,10 @@
 @import '@/styles/abstracts/mixins.scss';
 
+.reviews {
+  margin: 3rem auto;
+}
 .subtitle {
-  font-size: 90%;
+  font-size: 1.5rem;
   margin-bottom: 0.6rem;
 }
 
