--- a/styles/themes/dark/_pallete.scss
+++ b/styles/themes/dark/_pallete.scss
@@ -14,5 +14,6 @@
   --color-yellow: #efb034;
   --color-green: #1dd75b;
   --color-blue: #379ae6;
+  --color-pink: rgb(255, 93, 126);
   --black-gradient: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
 }
