--- a/components/base/Button/Button.module.scss
+++ b/components/base/Button/Button.module.scss
@@ -36,7 +36,9 @@
       font-size: 2rem;
     }
 
-    &:hover,
+    &:hover {
+      opacity: 0.7;
+    }
     &.active {
       opacity: 1;
 
@@ -52,6 +54,9 @@
       color: var(--color-yellow);
       border-color: var(--color-yellow);
     }
+    &:hover {
+      opacity: 0.7;
+    }
   }
   &.green {
     &:hover,
@@ -59,12 +64,38 @@
       color: var(--color-green);
       border-color: var(--color-green);
     }
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+  &.blue {
+    &:hover,
+    &.active {
+      color: var(--color-blue);
+      border-color: var(--color-blue);
+    }
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+  &.pink {
+    &:hover,
+    &.active {
+      color: var(--color-pink);
+      border-color: var(--color-pink);
+    }
+    &:hover {
+      opacity: 0.7;
+    }
   }
   &.white {
     &:hover,
     &.active {
       color: var(--color-white);
       border-color: var(--color-white);
+    }
+    &:hover {
+      opacity: 0.7;
     }
   }
 }
