--- a/components/base/GenrePills/GenrePills.module.scss
+++ b/components/base/GenrePills/GenrePills.module.scss
@@ -1,22 +1,25 @@
 @import '@/styles/abstracts/mixins.scss';
 
 .genres {
-  margin: 1rem 0;
+  margin: 1rem 0 2rem;
   display: flex;
-  gap: 0.8rem;
+  gap: 1.2rem;
+  flex-wrap: wrap;
 }
 
 .genre {
-  color: var(--color-yellow);
-  border: 1px solid var(--color-yellow);
+  background-color: var(--color-yellow);
+  color: var(--color-black);
+  border: 2px solid transparent;
   border-radius: var(--border-radius);
-  padding: 0.2rem 1.2rem;
+  padding: 0.4rem 1.2rem;
   cursor: pointer;
   transition: var(--transition-default);
 
   &:hover,
   &:active {
-    color: var(--color-secondary);
-    border: 1px solid var(--color-secondary);
+    border-color: var(--color-yellow);
+    color: var(--color-yellow);
+    background-color: transparent;
   }
 }
