--- a/components/movies/MovieDetail/UserNotes/UserNotes.module.scss
+++ b/components/movies/MovieDetail/UserNotes/UserNotes.module.scss
@@ -1,8 +1,6 @@
 .btns {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
-  margin: 1rem auto;
+  gap: 1.2rem;
+  margin: 1rem auto 2rem;
 }
-
-
