--- a/components/movies/MovieDetail/UserComment/UserComment.module.scss
+++ b/components/movies/MovieDetail/UserComment/UserComment.module.scss
@@ -1,3 +1,9 @@
+@import '@/styles/abstracts/mixins.scss';
+
+.comment {
+  margin: 0 0 2rem;
+}
+
 .btns {
   display: flex;
   flex-direction: column;
