--- a/components/base/Button/Button.module.scss
+++ b/components/base/Button/Button.module.scss
@@ -7,12 +7,14 @@
   text-transform: uppercase;
   border-radius: var(--border-radius);
 
-  &.simple {
-    background-color: rgba(255, 255, 255, 0.25);
+  &.simple,
+  &.simpleOutlined {
+    background-color: rgba(255, 255, 255, 0.2);
     @include centerContent;
     padding: 0.4rem 2rem;
     gap: 0.6rem;
     font-size: 1.4rem;
+    border: 1px solid transparent;
 
     svg {
       font-size: 1.6rem;
@@ -20,7 +22,18 @@
 
     &:hover,
     &.active {
-      background-color: rgba(255, 255, 255, 0.4);
+      background-color: rgba(255, 255, 255, 0.35);
+    }
+  }
+
+  &.simpleOutlined {
+    border: 1px solid var(--color-white);
+    background-color: rgba(255, 255, 255, 0.4);
+
+    &:hover,
+    &.active {
+      background-color: var(--color-white);
+      color: var(--color-black);
     }
   }
 
