Add Story, Credits, Credit and adjust styles

--- a/components/base/Button/Button.module.scss
+++ b/components/base/Button/Button.module.scss
@@ -28,12 +28,14 @@
 
   &.simpleOutlined {
     border: 1px solid var(--color-white);
-    background-color: rgba(255, 255, 255, 0.4);
+    color: var(--color-black);
+    background-color: rgba(255, 255, 255, 1);
 
     &:hover,
     &.active {
       background-color: var(--color-white);
       color: var(--color-black);
+      background-color: rgba(255, 255, 255, 0.9);
     }
   }
 
