--- a/components/base/UserIcon/UserIcon.module.scss
+++ b/components/base/UserIcon/UserIcon.module.scss
@@ -1,12 +1,20 @@
 .image {
   display: block;
   position: relative;
-  width: 4rem;
-  height: 4rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
   overflow: hidden;
+  cursor: pointer;
+  border: 2px solid transparent;
+  transition: var(--transition-default);
 
   img {
     object-fit: cover;
+  }
+
+  &:hover,
+  &.active {
+    border-color: var(--color-white);
   }
 }
