--- a/components/layout/UserNav/UserNav.module.scss
+++ b/components/layout/UserNav/UserNav.module.scss
@@ -5,17 +5,19 @@
   right: 0;
   top: 0;
 }
+
 .userMenu {
   position: absolute;
   width: 16rem;
-  right: 1rem;
+  right: 0;
   top: 5rem;
   display: flex;
   flex-direction: column;
-  background-color: lemonchiffon;
+  background-color: rgba(255, 255, 255, 0.9);
   color: var(--color-black);
   border-radius: var(--border-radius);
+  padding: 1.2rem;
 }
 .link {
-  padding: 1rem;
+  padding: 1.2rem;
 }
