--- a/components/movies/MovieDetail/Reviews/Review/Review.module.scss
+++ b/components/movies/MovieDetail/Reviews/Review/Review.module.scss
@@ -21,7 +21,7 @@
 }
 
 .authorName {
-  font-size: 80%;
+  font-size: 90%;
   opacity: 0.8;
 }
 
@@ -42,6 +42,11 @@
   flex-direction: column;
   gap: 0.4rem;
   cursor: pointer;
+  transition: var(--transition-default);
+
+  &:hover {
+    color: var(--color-yellow);
+  }
 }
 
 .messageContent {
@@ -65,4 +70,28 @@
   border-radius: 50%;
   margin: 0.3rem;
   border: 1px solid white;
+}
+
+@include mq(tab) {
+  // .authorName {
+  //   font-size: 90%;
+  // }
+}
+
+@include mq(pc) {
+  .review {
+    margin-bottom: 2rem;
+  }
+
+  .authorName {
+    font-size: 1.6rem;
+  }
+
+  .authorIcon {
+    font-size: 2.6rem;
+  }
+
+  .date {
+    font-size: 90%;
+  }
 }
