--- a/components/movies/MovieDetail/Vote/Vote.module.scss
+++ b/components/movies/MovieDetail/Vote/Vote.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/abstracts/mixins.scss';
+
 .vote {
   margin-bottom: 1rem;
 }
@@ -17,4 +19,14 @@
 .voteAvg,
 .voteCount {
   font-weight: var(--font-weight-semi-bold);
+}
+
+@include mq(tab) {
+  .voteAvg {
+    font-size: 3.6rem;
+  }
+
+  .voteCount {
+    font-size: 2.8rem;
+  }
 }
