--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -55,3 +55,11 @@ $breakpoints: (
 @mixin blackGradientBg {
   background: var(--black-gradient);
 }
+
+@mixin subTitle {
+  font-size: 2.1rem;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  font-weight: var(--font-weight-semi-bold);
+  color: rgba(255, 255, 255, 0.7);
+}
