--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -63,3 +63,21 @@ $breakpoints: (
   font-weight: var(--font-weight-semi-bold);
   color: rgba(255, 255, 255, 0.7);
 }
+
+@mixin scroll-y {
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar {
+    width: 0.6rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: rgba(220, 221, 222, 1);
+    border-radius: 0.6rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: var(--color-black);
+    border-radius: 0.6rem;
+  }
+}
