--- a/components/base/MovieSlider/MovieSlider.module.scss
+++ b/components/base/MovieSlider/MovieSlider.module.scss
@@ -4,6 +4,17 @@
   width: 100%;
   height: 24rem;
   position: relative;
+  transition: var(--transition-default);
+
+  img {
+    transition: var(--transition-default);
+  }
+
+  &:hover {
+    img {
+      transform: scale(1.14);
+    }
+  }
 }
 
 .title {
