--- a/components/movies/MovieDetail/MovieDetail.module.scss
+++ b/components/movies/MovieDetail/MovieDetail.module.scss
@@ -48,6 +48,17 @@
   height: 80vh;
   position: relative;
   margin-bottom: 2rem;
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    @include blackGradientBgTopToBottom;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+  }
 }
 
 .posterImage {
@@ -151,6 +162,10 @@
     height: 40rem;
     position: relative;
     margin: 0 auto 1rem;
+
+    &::after {
+      display: none;
+    }
   }
 
   .posterImage {
