Add UserProdileEditModal, ProfileContent, and Add git add -A to check existence in conditions

--- a/components/profile/SocialLinks/SocialLinks.module.scss
+++ b/components/profile/SocialLinks/SocialLinks.module.scss
@@ -2,6 +2,7 @@
 
 .links {
   @include centerContent;
-  gap: 1.2rem;
-  font-size: 3rem;
+  gap: 2rem;
+  font-size: 2rem;
+  margin: 1rem auto;
 }
