--- a/components/base/Button/Button.module.scss
+++ b/components/base/Button/Button.module.scss
@@ -11,6 +11,11 @@
     justify-content: center;
   }
 
+  &.disabled {
+    cursor: not-allowed;
+    filter: grayscale(0.3);
+  }
+
   &.simple,
   &.simpleOutlined {
     background-color: rgba(255, 255, 255, 0.2);
