--- a/components/base/TextareaField/TextareaField.module.scss
+++ b/components/base/TextareaField/TextareaField.module.scss
@@ -21,8 +21,8 @@
 }
 
 @include mq(tab) {
-  .field {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-  }
+  // .field {
+  //   display: grid;
+  //   grid-template-columns: 1fr 2fr;
+  // }
 }
