--- a/styles/themes/dark/_pallete.scss
+++ b/styles/themes/dark/_pallete.scss
@@ -2,6 +2,7 @@
   --color-black: #151a23;
   --color-grey-dark: #2d3748;
   --color-grey-medium: #8792ab;
+  --color-grey: #8792ab;
   --color-grey-medium-secondary: #4c5b76;
   --color-grey-light: #dce1ea;
   --color-grey-light-secondary: #b4becf;
