--- a/components/base/loading/Spinner/Spinner.module.scss
+++ b/components/base/loading/Spinner/Spinner.module.scss
@@ -18,7 +18,7 @@
       width: 6px;
       height: 18px;
       border-radius: 20%;
-      background: var(--color-gray);
+      background: var(--color-grey);
     }
     &:nth-child(1) {
       transform: rotate(0deg);
@@ -85,7 +85,7 @@
         width: 3px;
         height: 9px;
         border-radius: 20%;
-        background: var(--color-gray);
+        background: var(--color-grey);
       }
     }
   }
