--- a/components/movies/MovieDetail/UserComment/Star/Star.module.scss
+++ b/components/movies/MovieDetail/UserComment/Star/Star.module.scss
@@ -1,19 +1,30 @@
 .star {
   font-size: 4rem;
   color: var(--color-yellow);
-  cursor: pointer;
 
   .fillStar {
     display: none;
   }
 
-  &.active,
-  &:hover {
+  &.active {
     .fillStar {
       display: block;
     }
     .outlineStar {
       display: none;
+    }
+  }
+
+  &.interactive {
+    cursor: pointer;
+
+    &:hover {
+      .fillStar {
+        display: block;
+      }
+      .outlineStar {
+        display: none;
+      }
     }
   }
 }
