--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -95,6 +95,12 @@ $breakpoints: (
     font-size: 2rem;
   }
 
+  &.icon-sm {
+    svg {
+      font-size: 1.6rem;
+    }
+  }
+
   &.icon-lg {
     svg {
       font-size: 2.6rem;
@@ -111,6 +117,12 @@ $breakpoints: (
   &.active {
     svg {
       font-size: 2.2rem;
+    }
+
+    &.icon-sm {
+      svg {
+        font-size: 1.8rem;
+      }
     }
 
     &.icon-lg {
