--- a/layout/Header/Header.module.scss
+++ b/layout/Header/Header.module.scss
@@ -16,7 +16,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: var(--gap-lg);
   position: relative;
 
