--- a/components/base/FieldMsg/FieldMsg.module.scss
+++ b/components/base/FieldMsg/FieldMsg.module.scss
@@ -11,7 +11,7 @@
   // .text {
   // }
   &.ok {
-    color: var(--color-yellow);
+    color: var(--color-blue);
   }
   &.ng {
     color: var(--color-red);
