--- a/components/base/Modal/Modal.module.scss
+++ b/components/base/Modal/Modal.module.scss
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: flex-start;
   z-index: 99999;
-  color: var(--color-black);
+  // color: var(--color-black);
 
   &.circle {
     border-radius: 8px;
