--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800&family=Rubik:wght@300;400;700&display=swap');
 
-@import './base/reset';
+// @import './base/reset';
 @import './themes/dark/pallete';
 @import './themes/dark/alias';
 @import './abstracts/variables';
