--- a/components/base/MoviesListItem/MoviesListItem.module.scss
+++ b/components/base/MoviesListItem/MoviesListItem.module.scss
@@ -1,8 +1,9 @@
 @import '@/styles/abstracts/mixins.scss';
 
 .movie {
-  // border: 1px solid;
+  display: block;
   overflow: hidden;
+  position: relative;
 
   img {
     transition: var(--transition-default);
@@ -15,4 +16,13 @@
       transform: scale(1.14);
     }
   }
+}
+
+.link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
