Adjust form button

--- a/components/home/Hero/Hero.module.scss
+++ b/components/home/Hero/Hero.module.scss
@@ -115,6 +115,7 @@
   letter-spacing: 0.6px;
   font-size: 1.5rem;
   transition: var(--transition-default);
+  font-weight: var(--font-weight-semi-bold);
 
   &:hover,
   &:active {
