--- a/components/base/GenrePills/GenrePills.module.scss
+++ b/components/base/GenrePills/GenrePills.module.scss
@@ -5,6 +5,10 @@
   display: flex;
   gap: 1.2rem;
   flex-wrap: wrap;
+
+  &.inHome {
+    gap: 1rem;
+  }
 }
 
 .genre {
@@ -21,5 +25,10 @@
     background-color: var(--color-white);
     color: var(--color-black);
     border-color: transparent;
+  }
+
+  &.inHome {
+    padding: 0.3rem 0.9rem;
+    opacity: 0.8;
   }
 }
