Add MovieCommonDataContext to handle genres in whole app, Show List as collection searched by genre

--- a/components/base/SubTitle/SubTitle.module.scss
+++ b/components/base/SubTitle/SubTitle.module.scss
@@ -5,4 +5,20 @@
   font-weight: 700;
   margin-bottom: 1rem;
   @include subTitle;
+
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+
+  a {
+    svg {
+      font-size: 1.8rem;
+      transition: var(--transition-default);
+    }
+    &:hover {
+      svg {
+        color: var(--color-yellow);
+      }
+    }
+  }
 }
