--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -70,6 +70,10 @@ $breakpoints: (
   margin-bottom: 1.6rem;
   font-weight: var(--font-weight-semi-bold);
   color: rgba(255, 255, 255, 0.7);
+
+  @include mq(pc) {
+    font-size: 2.4rem;
+  }
 }
 
 @mixin scroll-y {
