--- a/components/base/MovieSlider/MovieSlider.module.scss
+++ b/components/base/MovieSlider/MovieSlider.module.scss
@@ -1,5 +1,18 @@
 @import '@/styles/abstracts/mixins.scss';
 
+.slide {
+  position: relative;
+}
+
+.link {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
 .imageWrapper {
   width: 100%;
   height: 24rem;
