--- a/components/base/StatusIcon/StatusIcon.module.scss
+++ b/components/base/StatusIcon/StatusIcon.module.scss
@@ -1,10 +1,18 @@
 @import '@/styles/abstracts/mixins.scss';
 
 .icon {
+  position: relative;
   font-size: 2.4rem;
+  z-index: 9999;
 
   svg {
     transition: var(--transition-default);
+    opacity: 0.8;
+
+    &.active {
+      color: var(--color-green);
+      opacity: 1;
+    }
   }
 
   &:hover {
