Add pagenation to collection

--- a/components/base/MoviesList/MoviesList.module.scss
+++ b/components/base/MoviesList/MoviesList.module.scss
@@ -27,9 +27,9 @@
 }
 
 @include mq(pc) {
-  .movies {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 1rem;
-  }
+  // .movies {
+  //   display: grid;
+  //   grid-template-columns: repeat(6, 1fr);
+  //   gap: 1rem;
+  // }
 }
