--- a/components/search/SearchField/SearchField.module.scss
+++ b/components/search/SearchField/SearchField.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/abstracts/mixins.scss';
 
-.hero {
+.container {
   height: 100vh;
   width: 100%;
   margin-bottom: 2rem;
@@ -123,7 +123,7 @@
 }
 
 @include mq(tab) {
-  .hero {
+  .container {
     height: 40vh;
     min-height: 42rem;
 
@@ -166,7 +166,7 @@
 }
 
 @include mq(pc) {
-  .hero {
+  .container {
     height: 40vh;
     min-height: 46rem;
   }
