--- a/components/base/MovieSlider/MovieSlider.module.scss
+++ b/components/base/MovieSlider/MovieSlider.module.scss
@@ -15,7 +15,8 @@
 
 .imageWrapper {
   width: 100%;
-  height: 24rem;
+  height: 23rem;
+  // height: 24rem;
   position: relative;
   transition: var(--transition-default);
 
