--- a/layout/UserNav/UserNav.module.scss
+++ b/layout/UserNav/UserNav.module.scss
@@ -1,10 +1,7 @@
-.container {
-  // position: relative;
-  z-index: 999;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
+// .container {
+//   // position: relative;
+//   // z-index: 999;
+// }
 
 .userMenu {
   position: absolute;
@@ -18,6 +15,7 @@
   border-radius: var(--border-radius);
   padding: 1.2rem;
 }
+
 .link {
   padding: 1.2rem;
   transition: var(--transition-default);
