Add copyProfileLink button, Remove FacebookAuth

--- a/components/profile/ProfileOverview/ProfileOverview.module.scss
+++ b/components/profile/ProfileOverview/ProfileOverview.module.scss
@@ -8,9 +8,14 @@
   gap: 1.6rem;
 }
 
-.editBtn {
-  display: inline-block;
-  width: auto;
+.btns {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+.btn {
+  justify-content: flex-start !important;
 }
 
 .left {
