--- a/layout/UserNav/UserNav.module.scss
+++ b/layout/UserNav/UserNav.module.scss
@@ -15,6 +15,7 @@
   border-radius: var(--border-radius);
   padding: 1.2rem;
   z-index: 999;
+  box-shadow: var(--box-shadow-primary);
 }
 
 .link {
